# embedded_linux_cadtc

embedded_linux/: Gstreamer.odp  Gstreamer_Audio.odp  IIO.odp  Makefile-AutoVar.odp  Makefile-Link.odp  Makefile.odp  OutLine.odp  RK3399_SystemBoot.odg  Setup_Environment.odp  Update_To_NanoPiM4.odp  WIFI.odp  audio.odp  ch0_My_OutLine_school.odp  ch10_Control_Hardware_Driver.odp  ch10_Userspace_Control_Hardware.odp  ch1_Overview.odp  ch2_Embedded_Linux_2.odp  ch2_Embedded_Linux_3.odp  ch2_Embedded_Linux_Arch.odp  ch2_Rockpi.odp  ch3_Basic_Software_And_Tool.odp  ch3_Embedded_Linux.odp  ch3_Embedded_Linux_Generic_Tool.odp  ch4_Basic_Software_And_Tool.odp  ch4_CrossCompile_Toolchain.odp  ch4_Crosscompile_Toolchain.odp  ch5_CrossCompile_Toolchain.odp  ch5_u-boot.odp  ch6_Linux_Kernel.odp  ch6_u-boot.odp  ch7_Linux_Kernel.odp  ch7_Root_File_System.odp  docker.odp  (+12 more)
embedded_linux/sample/other/create_library/use_make/sample-use-lib/example-2-automake-multifile/: Makefile.am  Makefile.in  README  configure  configure.ac  configure.scan
embedded_linux/sample/other/create_library/use_make/sample-use-lib/example-2-automake-multifile/autom4te.cache/: output.0  requests  traces.0  traces.1
embedded_linux/sample/other/create_library/use_make/sample-use-lib/example-2-automake-multifile/src/: Makefile.am  Makefile.in  sample_prog.c
embedded_linux/sample/other/create_library/use_make/sample-use-lib/example-2-automake-multifile/src/inc/: sample_prog.h
embedded_linux/sample/other/create_library/use_make/sample-use-lib/example-2-automake-multifile/src/lib/: Makefile.am  Makefile.in
(+1330 files in other folders)
